# teddix

./: INSTALL  LICENSE  Makefile.am  README.md  autogen.sh  configure.ac
config/: initdb.sql  teddix.conf
init.d/: TeddixAgent  TeddixServer
pkg-src/debian/: README.source  changelog  control  copyright  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  files  init.d.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  teddix.cron.d.ex  teddix.default.ex  teddix.doc-base.EX  teddix.postinst.debhelper  teddix.prerm.debhelper  teddix.substvars  watch.ex
pkg-src/redhat/: teddix-2.0.el6.spec
pkg-src/teddix-agent/debian/: changelog  control  teddix-agent.postinst  teddix-agent.prerm
pkg-src/teddix-agent/redhat/: teddix-agent.spec
pkg-src/teddix-common/debian/: changelog  control  teddix-common.postinst
pkg-src/teddix-common/redhat/: teddix-common.spec
pkg-src/teddix-server/debian/: README.Debian  changelog  control  teddix-server.config  teddix-server.postinst  teddix-server.prerm
pkg-src/teddix-server/redhat/: teddix-server.spec
pkg-src/teddix-web/debian/: changelog  control  teddix-web.postinst  teddix-web.prerm
pkg-src/teddix-web/redhat/: teddix-web.spec
src/: TeddixAgent.py  TeddixAix.py  TeddixConfigFile.py  TeddixDatabase.py  TeddixInventory.py  TeddixLinux.py  TeddixLogger.py  TeddixParser.py  TeddixServer.py  TeddixSunOS.py
teddix-agent/: setup.py
teddix-agent/init.d/: teddix-agent  teddix-agent.debian  teddix-agent.generic  teddix-agent.rhel  teddix-agent.smf  teddix-agent.sunos-smf
teddix-agent/pkg-src/debian/: control
teddix-agent/pkg-src/redhat/: teddix-agent-2.0.el6.spec
teddix-agent/src/: teddix-agent
teddix-common/: setup.py
teddix-common/config/: teddix.conf
teddix-common/pkg-src/debian/: changelog  control
teddix-common/pkg-src/redhat/: teddix-common-2.0.el6.spec
teddix-common/teddix/: TeddixAix.py  TeddixConfigFile.py  TeddixDarwin.py  TeddixDatabase.py  TeddixHPUX.py  TeddixInventory.py  TeddixLinux.py  TeddixLogger.py  TeddixParser.py  TeddixSunOS.py  TeddixWindows.py
teddix-server/: setup.py
teddix-server/config/: initdb.sql  teddix.conf
teddix-server/init.d/: teddix-server  teddix-server.debian  teddix-server.generic  teddix-server.rhel
teddix-server/pkg-src/debian/: changelog  control
teddix-server/pkg-src/redhat/: teddix-server-2.0.el6.spec
teddix-server/src/: teddix-server
teddix-web/: setup.py
teddix-web/config/: websettings.py
teddix-web/init.d/: teddix-web  teddix-web.debian  teddix-web.generic  teddix-web.rhel
teddix-web/pkg-src/debian/: changelog  control
teddix-web/pkg-src/redhat/: teddix-web-2.0.el6.spec
teddix-web/src/: manage.py
teddix-web/src/teddixweb/: settings.py  urls.py  views.py  wsgi.py
teddix-web/src/teddixweb/static/: bootstrap-popover.js  bootstrap-progressbar.js
teddix-web/src/teddixweb/templates/: base.html  extra.html  login.html
teddix-web/src/teddixweb/templates/agents/: agent_detail.html  agent_edit.html  agent_test.html  agents.html  connection_test.html
teddix-web/src/teddixweb/templates/extra/: bootlog.html  cfg2html.html  dmesg.html  extra.html
teddix-web/src/teddixweb/templates/hosts/: agent_detail.html  agent_edit.html  agents.html  arch.html  groups.html  hardware.html  net.html  notready.html  os.html  patches.html  software.html  users.html  usersgroups.html
teddix-web/src/teddixweb/templates/monitor/: dashboard.html
teddix-web/src/teddixweb/templates/statistics/: arch.html  groups.html  hardware.html  patches.html  software.html  users.html
